--- a/xmlHttpRequest3.html
+++ b/xmlHttpRequest3.html
@@ -11,6 +11,48 @@
     <h1>States</h1>
 
     <script>
-        // ...
+        function ajax(config){
+            const xhr = new XMLHttpRequest();
+            xhr.open(config.method, config.url, true); //true because is async
+
+            xhr.onreadystatechange = e =>{
+                //request finished and response is ready
+                if(xhr.readyState === 4){
+                    if(xhr.status === 200){
+                        config.success(xhr.responseXML);
+                    }
+                    else if(xhr.status >= 400){
+                        config.error({
+                            code: xhr.status,
+                            text: xhr.statusText
+                        });
+                    }
+                }
+            }
+            xhr.send();
+        }
+
+        ajax({
+            url: "data/states.xml",
+            method: "get",
+            success(answer){
+                const states = answer.getElementsByTagName('state');
+
+                // create a list of every state using reduce, where the html is the accomulator
+                // and was generated from an empty string
+
+                const items = Array.from(states).reduce(
+                   //html is accomulator        get the value of the attibute name in states.xml
+                    (html, state) => html + `<li>${state.attributes.name.value}</li>`, '' // '', initial of the string
+                );
+                // insert in the end of the body
+                document.body.insertAdjacentHTML('beforeend', `<ul>${items}</ul>`);
+            },
+            error(e){
+                const msg = document.createTextNode(`${e.code}: ${e.text}`);
+                document.body.appendChild(msg);
+            }
+        })
+
     </script>
 </body>
