--- a/fetch1.html
+++ b/fetch1.html
@@ -11,6 +11,15 @@
     <h1>States</h1>
 
     <script>
-        // ...
+        const url = 'data/states.json'
+
+        fetch(url) //return a Promise
+            .then(resp => resp.json()) //necessary to convert, because of fetch
+            .then(states => {
+                const items = states.reduce(
+                    (html, state) => html + `<li>${state.name}</li>`, ''
+                );
+                document.body.insertAdjacentHTML('beforeend', `<ul>${items}</ul>`);
+            })
     </script>
 </body>
