--- a/jqueryAjax.html
+++ b/jqueryAjax.html
@@ -14,6 +14,36 @@
     <div id="post"></div>
 
     <script>
-        // ...
+        
+        function showResult(id, data){
+            const text = JSON.stringify(data);
+            document.getElementById(id).innerHTML = text;
+        }
+
+        $.ajax({
+            url: 'evenOrOdd',
+            data: {
+                number: 2
+            },
+            success(data){
+                showResult('get', data)
+            }
+        })
+
+        $.ajax({
+            url: 'form',
+            method: 'post',
+            data: {
+                name: 'Joana',
+                lastname: 'Souza'
+            },
+            success(data){
+                showResult('post', data)
+            },
+            error(e){
+                showResult('post', e)
+            }
+        })
+
     </script>
 </body>
